--- a/style.css
+++ b/style.css
@@ -1,18 +1,3 @@
-/*
-display: flex | inline-flex;
-flex-direction: row | column;
-flex-wrap: wrap | no wrap | wrapreverse;
-flex-basis: <length>; // same as width but more flexy
-justify-content: flex-start | flex-end | center;
-align-self: flex-start | flex-end | center;
-align-items: flex-start | flex-end | center;
-align-content: flex-start | flex-end | center;
-flex-grow: <number>;
-flex-shrink: <number>;
-flex: <integer>;
-order: <integer>; (edited) 
-
-*/
 * {
 margin: 0;
 padding: 0;
@@ -38,7 +23,6 @@ body {
     font-family: "Ink Free";
     font-size: 34px;
     border-radius: 20px;
-
 }
 
 .box {
@@ -56,7 +40,6 @@ body {
 	flex-direction: row;
 	justify-content: center;
 	color: red;
-
 }
 
 #cards {
@@ -81,10 +64,10 @@ body {
 				25px 25px 15px rgba(0,0,0,0.3);
 }
 
-#firstImg{
+/*.xyz{
 	z-index: 2;
 	margin-left: 0rem;
-}
+}*/
 
 #cardContent {
 	/*margin-right: -7rem;*/
@@ -101,21 +84,25 @@ body {
 	z-index: 1;
 	margin-right: -16rem;
 	padding: 10px;
-
 	display: flex;
 	flex-direction: row;
 	justify-content: center;
-	color: red;
 }
 
 #firstCard:hover {
 	transform: translateY(-1rem);
 }
 
-
 .child {
-	max-width: 210px;
-	max-height: 150px;
+	width: 210px;
+	height: 150px;
+	text-align: center;
+	display: table-cell;
+	vertical-align: middle;
+}
+
+h5 {
+	text-align: center;
 }
 
 #buttons {
@@ -125,6 +112,7 @@ body {
     height: 30px; 
     padding-bottom: 30px;
 }
+
 .hidden {
 	display: none;
 }
@@ -138,15 +126,6 @@ button {
     width: 25%;
     height: 50px;
     font-size: 16px;
-}
-
-#start {
-	
-}
-
-#reset {
-	
-    
 }
 
 header {
@@ -170,10 +149,7 @@ nav {
 	padding: 15px;
 }
 
-
-
 header nav span a{
-
 	color: white;
 	text-decoration: none;
 	font-size: 24px;
@@ -184,19 +160,9 @@ footer {
   	align-items: center;
   	justify-content: center;
     /*padding: 25px;*/
-    
     height: 45px;
-
     background-color: rgba(128,128,128,0.6);
     width: 50%;
     margin: 20px auto 0px auto;
     border-radius: 20px;
-
 }
-
-
-
-
-
-
-
